Team section + CSS cleanup

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="container">
-      <header class="topnav">
+    <header class="container">
+      <div class="topnav">
         <h1>EFLab</h1>
         <div class="hamburger" tabindex="0" role="button" aria-expanded="false">
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" width="24" height="24" viewBox="0 0 24 24" style="width:48px;height:48px">
@@ -51,25 +51,25 @@
             </a></li>
           </ul>
         </div> 
-      </header>
+      </div>
       <div class="hero">
         <img src="images/1_FEMINISM.svg" alt="">
         <div>
           <h2>What we do</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis blandit nibh, ac sodales est. Vivamus nisl diam, imperdiet sit amet augue eget, pretium ultrices dolor.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis blandit nibh, ac sodales est. Vivamus nisl diam, imperdiet sit amet augue eget, pretium ultrices dolor. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta labore, corporis, quos sunt nihil deleniti consequuntur cumque exercitationem amet, esse sequi.</p>
           <button class="btn btn-red">Find out more about us</button>
         </div>
       </div>
-    </div>
-    <div class="sponsors" aria-label="Sponsors">
+    </header>
+    <section class="sponsors" aria-label="Sponsors">
       <img src="images/logos/Adobe_logo.svg" alt="Adobe">
       <img src="images/logos/Amazon_logo.svg" alt="Amazon"> 
       <img src="images/logos/Facebook_Logo.svg" alt="Facebook">
       <img src="images/logos/Google_logo.svg" alt="Google">
       <img src="images/logos/intel.svg" alt="Intel">
       <img src="images/logos/samsung.svg" alt="Samsung">
-    </div>
-    <div class="container">
+    </section>
+    <section class="container">
       <h2 class="center">Our clients love us because</h2>
       <div class="hero">
         <img src="images/2_LGBTQ+.svg" alt="">
@@ -95,8 +95,8 @@
           <p><a href="/three">Learn more about Feature Three</a></p>
         </div>
       </div>
-    </div>
-    <div class="newsletter">
+    </section>
+    <section class="content-centered content-odd">
       <div class="content">
         <h2 class="h3">Subscribe to our newsletter</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos vitae ad perspiciatis soluta ullam explicabo consequatur.</p>
@@ -107,8 +107,8 @@
         </form>
         <p class="small">* Your address is safe with us. We never share your email address.</p>
       </div>
-    </div>
-    <div class="testimonials">
+    </section>
+    <section class="content-centered">
       <div class="content">
         <h2 class="h3">Testimonials</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas excepturi quos incidunt nam, placeat obcaecati esse tenetur, illum quaerat modi quae? In animi repellat voluptate obcaecati, corrupti cupiditate voluptatem. Culpa.</p>
@@ -147,7 +147,48 @@
           </li>
         </ul>
       </div>
-    </div>
+    </section>
+    <section class="content-centered content-odd">
+      <h2 class="h3">Meet our team</h2>
+      <div class="cards">
+        <ul>
+          <li class="card2">  
+            <div class="img">
+              <img src="./images/people/4.jpg" alt="Portrait of Person Name">
+            </div>
+            <h3>Person Name</h3>
+            <small>CEO</small>
+            <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit."</p> 
+          </li>
+          <li class="card2">  
+            <div class="img">
+              <img src="./images/people/5.jpg" alt="Portrait of Person Name">
+            </div>
+            <h3>Person Name</h3>
+            <small>Frontend Developer</small>
+            <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit."</p>
+          </li>
+          <li class="card2">  
+            <div class="img">
+              <img src="./images/people/6.jpg" alt="Portrait of Person Name">
+            </div>
+            <h3>Person Name</h3>
+            <small>UX Designer</small>
+            <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit."</p> 
+          </li>
+          <li class="card2">  
+            <div class="img">
+              <img src="./images/people/7.jpg" alt="Portrait of Person Name">
+            </div>
+            <h3>Person Name</h3>
+            <small>Accessibility Specialist</small>
+            <p>"Lorem, ipsum dolor sit amet consectetur adipisicing elit."</p> 
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <footer></footer>
     <script src="js/script.js"></script>
   </body>
 </html>
