--- a/index.html
+++ b/index.html
@@ -24,7 +24,15 @@
           <ul>
             <li class="current"><a href="#" aria-current="page">Home</a></li>
             <li><a href="#">Blog</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li class="dropdown">
+              <button type="button" class="dropdown__title" aria-expanded="false" aria-haspopup="true">
+                Portfolio
+              </button>
+              <ul class="dropdown__menu" id="sweets-dropdown">
+                <li><a href="#">Works</a></li>
+                <li><a href="#">Photography</a></li>
+              </ul>
+            </li>
             <li><a href="#">Team</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
