--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <li class="current"><a href="#" aria-current="page">Home</a></li>
             <li><a href="#">Blog</a></li>
             <li class="dropdown">
-              <button type="button" class="dropdown__title" aria-expanded="false" aria-haspopup="true">
+              <a href="#" class="dropdown-title" aria-expanded="false" aria-haspopup="true">
                 Portfolio
-              </button>
-              <ul class="dropdown__menu" id="sweets-dropdown">
+              </a>
+              <ul class="dropdown-menu" id="sweets-dropdown">
                 <li><a href="#">Works</a></li>
                 <li><a href="#">Photography</a></li>
               </ul>
