--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="description" content="Free company HTML5 Template">
     <title>EFLab</title>
 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link href='https://fonts.gstatic.com' rel='preconnect' crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" “media="print" onload="this.onload=null;this.media='all'">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <header class="container">
@@ -66,7 +67,7 @@
       <section class="container">
         <div class="row jcsa aic">
           <div class="column2">
-            <img src="images/1_FEMINISM.svg" alt="">
+            <img src="images/1_FEMINISM.svg" alt="" width="500" height="500">
           </div>
           <div class="column2">
             <h2>What we do</h2>
@@ -77,17 +78,17 @@
       </section>
       
       <section class="sponsors" aria-label="Sponsors">
-        <img src="images/logos/Adobe_logo.svg" alt="Adobe">
-        <img src="images/logos/Amazon_logo.svg" alt="Amazon"> 
-        <img src="images/logos/Facebook_Logo.svg" alt="Facebook">
-        <img src="images/logos/Google_logo.svg" alt="Google">
-        <img src="images/logos/intel.svg" alt="Intel">
+        <img src="images/logos/Adobe_logo.svg" alt="Adobe" width="400" height="300">
+        <img src="images/logos/Amazon_logo.svg" alt="Amazon" width="400" height="300"> 
+        <img src="images/logos/Facebook_Logo.svg" alt="Facebook" width="400" height="300">
+        <img src="images/logos/Google_logo.svg" alt="Google" width="400" height="300">
+        <img src="images/logos/intel.svg" alt="Intel" width="400" height="300">
       </section>
       <section class="container">
         <h2 class="center">Our clients love us because</h2>
         <div class="row jcsa aic">
           <div class="column2">
-            <img src="images/2_LGBTQ+.svg" alt="">
+            <img src="images/2_LGBTQ+.svg" alt="" width="500" height="500">
           </div>
           <div class="column2">
             <h3>Feature One</h3>
@@ -102,12 +103,12 @@
             <p><a href="#">Learn more about Feature Two</a></p>
           </div>
           <div class="column2">
-            <img src="images/3_BLM_PROTESTS.svg" alt="">
+            <img src="images/3_BLM_PROTESTS.svg" alt="" width="500" height="500">
           </div>
         </div>
         <div class="row jcsa aic">
           <div class="column2">
-            <img src="images/4_SOCIAL MEDIA.svg" alt="">
+            <img src="images/4_SOCIAL MEDIA.svg" alt="" width="500" height="500">
           </div>
           <div class="column2">
             <h3>Feature Three</h3>
@@ -137,7 +138,7 @@
           <ul class="row jcc">
             <li class="card">  
               <div class="img">
-                <img src="./images/people/1.jpg" alt="Portrait of Person Name">
+                <img src="./images/people/1.jpg" alt="Portrait of Person Name" width="320" height="480">
               </div>
               <div class="text">
                 <h3>Person Name</h3>
@@ -147,7 +148,7 @@
             </li>
             <li class="card">  
               <div class="img">
-                <img src="./images/people/2.jpg" alt="Portrait of Person Name">
+                <img src="./images/people/2.jpg" alt="Portrait of Person Name" width="320" height="320">
               </div>
               <div class="text">
                 <h3>Person Name</h3>
@@ -157,7 +158,7 @@
             </li>
             <li class="card">  
               <div class="img">
-                <img src="./images/people/3.jpg" alt="Portrait of Person Name">
+                <img src="./images/people/3.jpg" alt="Portrait of Person Name" width="320" height="480">
               </div>
               <div class="text">
                 <h3>Person Name</h3>
@@ -174,7 +175,7 @@
           <ul class="row jcc">
             <li class="column4 card2">  
               <div class="img">
-                <img src="./images/people/4.jpg" alt="Portrait of Person Name">
+                <img src="./images/people/4.jpg" alt="Portrait of Person Name" width="500" height="333">
               </div>
               <h3>Person Name</h3>
               <small>CEO</small>
@@ -182,7 +183,7 @@
             </li>
             <li class="column4 card2">  
               <div class="img">
-                <img src="./images/people/5.jpg" alt="Portrait of Person Name">
+                <img src="./images/people/5.jpg" alt="Portrait of Person Name" width="500" height="750">
               </div>
               <h3>Person Name</h3>
               <small>Frontend Developer</small>
@@ -190,7 +191,7 @@
             </li>
             <li class="column4 card2">  
               <div class="img">
-                <img src="./images/people/6.jpg" alt="Portrait of Person Name">
+                <img src="./images/people/6.jpg" alt="Portrait of Person Name" width="500" height="750">
               </div>
               <h3>Person Name</h3>
               <small>UX Designer</small>
@@ -198,7 +199,7 @@
             </li>
             <li class="column4 card2">  
               <div class="img">
-                <img src="./images/people/7.jpg" alt="Portrait of Person Name">
+                <img src="./images/people/7.jpg" alt="Portrait of Person Name" width="500" height="704">
               </div>
               <h3>Person Name</h3>
               <small>Accessibility Specialist</small>
@@ -314,6 +315,6 @@
     <footer class="mainfooter">
       <p>&copy; 2020 EFLab. All Rights Reserved.</p>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
